--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <title>Wórld on a Platë</title>
   <meta name="title" content="Wórld on a Platë">
-  <meta name="description" content="This is a Restaurant html template made by https://github.com/sanjana2505006">
+  <meta name="description" content="World on a Plate - A Fine Dining Experience">
 
 
   <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
@@ -21,6 +21,7 @@
 
 
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/sections.css">
 
 
   <link rel="preload" as="image" href="./assets/images/hero-slider-1.jpg">
@@ -130,18 +131,23 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="navbar-link hover-underline">
+            <a href="#chefs" class="navbar-link hover-underline">
               <div class="separator"></div>
-
               <span class="span">Our Chefs</span>
             </a>
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="navbar-link hover-underline">
+            <a href="#footer" class="navbar-link hover-underline">
               <div class="separator"></div>
-
               <span class="span">Contact</span>
+            </a>
+          </li>
+
+          <li class="navbar-item">
+            <a href="booking.html" class="navbar-link hover-underline">
+              <div class="separator"></div>
+              <span class="span">Book Table</span>
             </a>
           </li>
 
@@ -170,7 +176,7 @@
 
       </nav>
 
-      <a href="#" class="btn btn-secondary">
+      <a href="booking.html" class="btn btn-secondary">
         <span class="text text-1">Find A Table</span>
 
         <span class="text text-2" aria-hidden="true">Find A Table</span>
@@ -992,143 +998,147 @@
         </div>
       </section>
 
-    </article>
-  </main>
-
-
-
-
-
-  <!-- 
-    - #FOOTER
-  -->
-
-  <footer class="footer section has-bg-image text-center"
-    style="background-image: url('./assets/images/footer-bg.jpg')">
-    <div class="container">
-
-      <div class="footer-top grid-list">
-
-        <div class="footer-brand has-before has-after">
-
-          <a href="#" class="logo">
-            <img src="./assets/images/logo.svg" width="160" height="50" loading="lazy" alt="grilli home">
-          </a>
-
-          <address class="body-4">
-           Newton School of Technology, Pune
-          </address>
-
-          <a href="mailto:booking@grilli.com" class="body-4 contact-link">booking@restaurant.com</a>
-
-          <a href="tel:+88123123456" class="body-4 contact-link">Booking Request : +91-8006257770</a>
-
-          <p class="body-4">
-            Open : 09:00 am - 01:00 pm
+      <!-- Chefs Section -->
+      <section class="section chefs text-center" aria-label="chefs" id="chefs">
+        <div class="container">
+          <h2 class="headline-1 section-title">Our Master Chefs</h2>
+          <p class="section-subtitle">
+            Culinary excellence crafted by passionate professionals
           </p>
-
-          <div class="wrapper">
-            <div class="separator"></div>
-            <div class="separator"></div>
-            <div class="separator"></div>
-          </div>
-
-          <p class="title-1">Get News & Offers</p>
-
-          <p class="label-1">
-            Subscribe us & Get <span class="span">25% Off.</span>
-          </p>
-
-          <form action="" class="input-wrapper">
-            <div class="icon-wrapper">
-              <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
-
-              <input type="email" name="email_address" placeholder="Your email" autocomplete="off" class="input-field">
+          <div class="grid-list">
+            <div class="grid-item">
+              <div class="chef-card">
+                <figure class="card-banner">
+                  <img src="./assets/images/chef-1.jpg" alt="Executive Chef">
+                </figure>
+                <div class="card-content">
+                  <h3 class="title-4 card-title">Chef Alessandro</h3>
+                  <p class="label-2">Executive Chef</p>
+                  <p class="chef-description">
+                    With over 15 years of experience in fine dining, Chef Alessandro brings his passion for Italian cuisine and innovative cooking techniques to create unforgettable dining experiences.
+                  </p>
+                  <div class="chef-social">
+                    <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                  </div>
+                </div>
+              </div>
             </div>
 
-            <button type="submit" class="btn btn-secondary">
-              <span class="text text-1">Subscribe</span>
+            <div class="grid-item">
+              <div class="chef-card">
+                <figure class="card-banner">
+                  <img src="./assets/images/chef-2.jpg" alt="Sous Chef">
+                </figure>
+                <div class="card-content">
+                  <h3 class="title-4 card-title">Chef Maria</h3>
+                  <p class="label-2">Sous Chef</p>
+                  <p class="chef-description">
+                    Specializing in Mediterranean cuisine, Chef Maria's creative approach to traditional recipes has earned her recognition in the culinary world. Her signature dishes are a must-try.
+                  </p>
+                  <div class="chef-social">
+                    <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                  </div>
+                </div>
+              </div>
+            </div>
 
-              <span class="text text-2" aria-hidden="true">Subscribe</span>
-            </button>
-          </form>
-
+            <div class="grid-item">
+              <div class="chef-card">
+                <figure class="card-banner">
+                  <img src="./assets/images/chef-3.jpg" alt="Pastry Chef">
+                </figure>
+                <div class="card-content">
+                  <h3 class="title-4 card-title">Chef Pierre</h3>
+                  <p class="label-2">Pastry Chef</p>
+                  <p class="chef-description">
+                    A master of French pastry, Chef Pierre creates stunning desserts that are both visually striking and deliciously memorable. His chocolate creations are legendary.
+                  </p>
+                  <div class="chef-social">
+                    <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </section>
 
-        <ul class="footer-list">
+      <!-- Footer with Enhanced Contact Section -->
+      <footer class="footer" id="footer">
+        <div class="container">
+          <h2 class="headline-1 section-title text-center">Contact Us</h2>
+          <p class="section-subtitle text-center">
+            We'd love to hear from you
+          </p>
 
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Home</a>
-          </li>
+          <div class="contact-container">
+            <div class="contact-info-box">
+              <div class="icon">
+                <ion-icon name="location-outline"></ion-icon>
+              </div>
+              <h3>Our Location</h3>
+              <p>Newton School of Technology</p>
+              <p>Pune, Maharashtra</p>
+            </div>
 
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Menus</a>
-          </li>
+            <div class="contact-info-box">
+              <div class="icon">
+                <ion-icon name="time-outline"></ion-icon>
+              </div>
+              <h3>Opening Hours</h3>
+              <p>Monday to Sunday</p>
+              <p>8:00 AM - 10:00 PM</p>
+            </div>
 
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">About Us</a>
-          </li>
+            <div class="contact-info-box">
+              <div class="icon">
+                <ion-icon name="call-outline"></ion-icon>
+              </div>
+              <h3>Contact Info</h3>
+              <p>Phone: +91-8006257770</p>
+              <p>Email: booking@restaurant.com</p>
+            </div>
+          </div>
 
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Our Chefs</a>
-          </li>
-
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Contact</a>
-          </li>
-
-        </ul>
-
-        <ul class="footer-list">
-
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Facebook</a>
-          </li>
-
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Instagram</a>
-          </li>
-
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Twitter</a>
-          </li>
-
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Youtube</a>
-          </li>
-
-          <li>
-            <a href="#" class="label-2 footer-link hover-underline">Google Map</a>
-          </li>
-
-        </ul>
-
-      </div>
-
-      <div class="footer-bottom">
-
-        <p class="copyright">
-          &copy; 2024 World_on_a_Plate. All Rights Reserved | Crafted by <a href="https://github.com/sanjana2505006"
-            target="_blank" class="link">https://github.com/sanjana2505006</a>
-        </p>
-
-      </div>
-
-    </div>
-  </footer>
+          <div class="contact-form">
+            <form action="#" method="POST">
+              <div class="form-group">
+                <input type="text" placeholder="Your Name" required>
+              </div>
+              <div class="form-group">
+                <input type="email" placeholder="Your Email" required>
+              </div>
+              <div class="form-group">
+                <input type="tel" placeholder="Your Phone" required>
+              </div>
+              <div class="form-group">
+                <textarea rows="5" placeholder="Your Message" required></textarea>
+              </div>
+              <button type="submit">Send Message</button>
+            </form>
+          </div>
+        </div>
+      </footer>
 
 
 
-  <a href="#top" class="back-top-btn active" aria-label="back to top" data-back-top-btn>
-    <ion-icon name="chevron-up" aria-hidden="true"></ion-icon>
-  </a>
+      <a href="#top" class="back-top-btn active" aria-label="back to top" data-back-top-btn>
+        <ion-icon name="chevron-up" aria-hidden="true"></ion-icon>
+      </a>
 
+      <div style="opacity: 0; position: fixed; bottom: 0; right: 0; pointer-events: none;">Created by Vivek W - https://github.com/AryanVBW</div>
 
-  <script src="./assets/js/script.js"></script>
+      <script src="./assets/js/script.js"></script>
 
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+      <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+      <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-</body>
+    </body>
 
-</html>
+    </html>
